// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamic only logins with perms 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c11 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: none;
  text-decoration: underline;
}

.c7:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  padding: 8px;
  margin-bottom: 4px;
  width: 300px;
  align-items: center;
  border: 1px solid #222C59;
  border-radius: 8px;
}

.c4.disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c5 {
  margin-right: 10px;
  accent-color: #512FC9;
}

.c5:hover {
  cursor: pointer;
}

.c6 {
  width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8 {
  line-height: normal;
  padding-left: 4px;
}

.c10 {
  font-weight: bold;
  letter-spacing: 4px;
}

.c10:after {
  content: ' ';
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <input
        checked=""
        class="c5"
        id="root0"
        name="root"
        type="checkbox"
      />
      <label
        class="c6"
        for="root0"
      >
        root
      </label>
    </div>
    <div
      class="c4"
    >
      <input
        checked=""
        class="c5"
        id="llama1"
        name="llama"
        type="checkbox"
      />
      <label
        class="c6"
        for="llama1"
      >
        llama
      </label>
    </div>
    <div
      class="c4"
    >
      <input
        checked=""
        class="c5"
        id="george_washington_really_long_name_testing2"
        name="george_washington_really_long_name_testing"
        type="checkbox"
      />
      <label
        class="c6"
        for="george_washington_really_long_name_testing2"
      >
        george_washington_really_long_name_testing
      </label>
    </div>
    <button
      class="c7 c8"
      kind="text"
    >
      <span
        class="c9 icon icon-add c10"
        color="light"
      />
      Add new OS User
    </button>
  </div>
  <div
    class="c11"
  >
    
    <button
      class="c12"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c13"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`failed 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c8 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 4px;
}

.c6:active {
  opacity: 0.56;
}

.c6:hover,
.c6:focus {
  background: none;
  text-decoration: underline;
}

.c6:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  margin-right: 8px;
  color: #f50057;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c7 {
  color: #03a9f4;
  font-weight: normal;
  padding-left: 0;
  font-size: inherit;
  min-height: auto;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <span
        class="c5 icon icon-warning "
        color="danger"
      />
      Encountered Error: 
      some error message
    </div>
    <button
      class="c6 c7"
      kind="text"
    >
      Refetch OS Users
    </button>
  </div>
  <div
    class="c8"
  >
    
    <button
      class="c9"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c10"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`logins and is  SSO user 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c8 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 24px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  padding: 8px;
  margin-bottom: 4px;
  width: 300px;
  align-items: center;
  border: 1px solid #222C59;
  border-radius: 8px;
}

.c4.disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c5 {
  margin-right: 10px;
  accent-color: #512FC9;
}

.c5:hover {
  cursor: pointer;
}

.c6 {
  width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="ubunutu0"
        name="ubunutu"
        type="checkbox"
      />
      <label
        class="c6"
        for="ubunutu0"
      >
        ubunutu
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="debian1"
        name="debian"
        type="checkbox"
      />
      <label
        class="c6"
        for="debian1"
      >
        debian
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="root0"
        name="root"
        type="checkbox"
      />
      <label
        class="c6"
        for="root0"
      >
        root
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="llama1"
        name="llama"
        type="checkbox"
      />
      <label
        class="c6"
        for="llama1"
      >
        llama
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="george_washington_really_long_name_testing2"
        name="george_washington_really_long_name_testing"
        type="checkbox"
      />
      <label
        class="c6"
        for="george_washington_really_long_name_testing2"
      >
        george_washington_really_long_name_testing
      </label>
    </div>
    <div
      class="c7"
    >
      SSO users are not able to add new logins.
      <br />
      If you don't see the login that you require, please ask your Teleport administrator to update your role to add the required logins.
    </div>
  </div>
  <div
    class="c8"
  >
    
    <button
      class="c9"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c10"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`logins with no perms 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c9 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 24px;
}

.c8 {
  padding: 2px 5px;
  border-radius: 6px;
  background-color: rgb(255 255 255 / 17%);
  color: inherit;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  padding: 8px;
  margin-bottom: 4px;
  width: 300px;
  align-items: center;
  border: 1px solid #222C59;
  border-radius: 8px;
}

.c4.disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c5 {
  margin-right: 10px;
  accent-color: #512FC9;
}

.c5:hover {
  cursor: pointer;
}

.c6 {
  width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="ubunutu0"
        name="ubunutu"
        type="checkbox"
      />
      <label
        class="c6"
        for="ubunutu0"
      >
        ubunutu
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="debian1"
        name="debian"
        type="checkbox"
      />
      <label
        class="c6"
        for="debian1"
      >
        debian
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="root0"
        name="root"
        type="checkbox"
      />
      <label
        class="c6"
        for="root0"
      >
        root
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="llama1"
        name="llama"
        type="checkbox"
      />
      <label
        class="c6"
        for="llama1"
      >
        llama
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="george_washington_really_long_name_testing2"
        name="george_washington_really_long_name_testing"
        type="checkbox"
      />
      <label
        class="c6"
        for="george_washington_really_long_name_testing2"
      >
        george_washington_really_long_name_testing
      </label>
    </div>
    <div
      class="c7"
    >
      You don't have permission to add new logins.
      <br />
      If you don't see the login that you require, please ask your Teleport administrator to update your role to either add the required logins or add the rule 
      <mark
        class="c8"
      >
        users.update
      </mark>
      .
    </div>
  </div>
  <div
    class="c9"
  >
    
    <button
      class="c10"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c11"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`no logins and perms 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c6 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #651FFF;
}

.c7:active {
  background: #354AA4;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #2C3A73;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 24px;
}

.c5 {
  padding: 2px 5px;
  border-radius: 6px;
  background-color: rgb(255 255 255 / 17%);
  color: inherit;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      width="100px"
    >
      You don’t have any allowed logins and permission to add new logins.
      <br />
      Please ask your Teleport administrator to update your role to either add the required logins or add the rule 
      <mark
        class="c5"
      >
        users.update
      </mark>
      .
    </div>
  </div>
  <div
    class="c6"
  >
    
    <button
      class="c7"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c8"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`no logins with perms 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c10 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c6:active {
  opacity: 0.56;
}

.c6:hover,
.c6:focus {
  background: none;
  text-decoration: underline;
}

.c6:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #2C3A73;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  padding: 8px;
  margin-bottom: 4px;
  width: 300px;
  align-items: center;
  border: 1px solid #222C59;
  border-radius: 8px;
}

.c4.disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  font-style: italic;
  overflow: visible;
}

.c7 {
  line-height: normal;
  padding-left: 4px;
}

.c9 {
  font-weight: bold;
  letter-spacing: 4px;
}

.c9:after {
  content: ' ';
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        No OS users added
      </div>
    </div>
    <button
      class="c6 c7"
      kind="text"
    >
      <span
        class="c8 icon icon-add c9"
        color="light"
      />
      Add new OS User
    </button>
  </div>
  <div
    class="c10"
  >
    
    <button
      class="c11"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c12"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`no logins, perms, and is a SSO user 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c5 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c6:active {
  opacity: 0.56;
}

.c6:hover,
.c6:focus {
  background: #651FFF;
}

.c6:active {
  background: #354AA4;
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #2C3A73;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 24px;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      width="100px"
    >
      You don’t have any allowed logins.
      <br />
      Please ask your Teleport administrator to update your role and add the required logins.
    </div>
  </div>
  <div
    class="c5"
  >
    
    <button
      class="c6"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c7"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`static and dynamic logins with perms\` 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c11 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: none;
  text-decoration: underline;
}

.c7:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  padding: 8px;
  margin-bottom: 4px;
  width: 300px;
  align-items: center;
  border: 1px solid #222C59;
  border-radius: 8px;
}

.c4.disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c5 {
  margin-right: 10px;
  accent-color: #512FC9;
}

.c5:hover {
  cursor: pointer;
}

.c6 {
  width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8 {
  line-height: normal;
  padding-left: 4px;
}

.c10 {
  font-weight: bold;
  letter-spacing: 4px;
}

.c10:after {
  content: ' ';
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="ubunutu0"
        name="ubunutu"
        type="checkbox"
      />
      <label
        class="c6"
        for="ubunutu0"
      >
        ubunutu
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="debian1"
        name="debian"
        type="checkbox"
      />
      <label
        class="c6"
        for="debian1"
      >
        debian
      </label>
    </div>
    <div
      class="c4"
    >
      <input
        checked=""
        class="c5"
        id="root0"
        name="root"
        type="checkbox"
      />
      <label
        class="c6"
        for="root0"
      >
        root
      </label>
    </div>
    <div
      class="c4"
    >
      <input
        checked=""
        class="c5"
        id="llama1"
        name="llama"
        type="checkbox"
      />
      <label
        class="c6"
        for="llama1"
      >
        llama
      </label>
    </div>
    <div
      class="c4"
    >
      <input
        checked=""
        class="c5"
        id="george_washington_really_long_name_testing2"
        name="george_washington_really_long_name_testing"
        type="checkbox"
      />
      <label
        class="c6"
        for="george_washington_really_long_name_testing2"
      >
        george_washington_really_long_name_testing
      </label>
    </div>
    <button
      class="c7 c8"
      kind="text"
    >
      <span
        class="c9 icon icon-add c10"
        color="light"
      />
      Add new OS User
    </button>
  </div>
  <div
    class="c11"
  >
    
    <button
      class="c12"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c13"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`static only logins with perms 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c11 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: none;
  text-decoration: underline;
}

.c7:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 32px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  padding: 8px;
  margin-bottom: 4px;
  width: 300px;
  align-items: center;
  border: 1px solid #222C59;
  border-radius: 8px;
}

.c4.disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c5 {
  margin-right: 10px;
  accent-color: #512FC9;
}

.c5:hover {
  cursor: pointer;
}

.c6 {
  width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8 {
  line-height: normal;
  padding-left: 4px;
}

.c10 {
  font-weight: bold;
  letter-spacing: 4px;
}

.c10:after {
  content: ' ';
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="ubunutu0"
        name="ubunutu"
        type="checkbox"
      />
      <label
        class="c6"
        for="ubunutu0"
      >
        ubunutu
      </label>
    </div>
    <div
      class="c4 disabled"
    >
      <input
        checked=""
        class="c5"
        id="debian1"
        name="debian"
        type="checkbox"
      />
      <label
        class="c6"
        for="debian1"
      >
        debian
      </label>
    </div>
    <button
      class="c7 c8"
      kind="text"
    >
      <span
        class="c9 icon icon-add c10"
        color="light"
      />
      Add new OS User
    </button>
  </div>
  <div
    class="c11"
  >
    
    <button
      class="c12"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c13"
      href="/web"
      kind="secondary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;
